--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Vision therapy tools</title>
   <meta name="darkreader-lock">
 
-  <link rel="stylesheet" href="vision.css">
-  <script src="commonfn.js"></script>
-  <script defer src="settings.js"></script>
+  <link rel="stylesheet" href="vision.css?v=01" />
+  <script src="commonfn.js?v=01"></script>
+  <script src="settings.js?v=01"></script>
 
   <style>
     body {
@@ -68,6 +68,7 @@
     <li><a href="#blocks">Pattern Blocks</a></li>
     <li><a href="#spotmatch">Spot the Match</a></li>
     <li><a href="#slaptap">Slap Tap</a></li>
+    <li><a href="#fistbump">Closed, Open, Flat</a></li>
   </ul>
 
   <hr />
@@ -218,6 +219,24 @@
       </li>
       <li>Adjust complexity by setting the Level via the dropdown menu.</li>
       <li>Works best on a desktop browser (wide screen)</li>
+      <li>Toggle Color mode for added complexity (say the color name as you slap/tap).</li>
+    </ul>
+
+  </div>
+
+
+
+  <h3 id="fistbump"><a href="fistbump.html">Closed, Open, Flat</a></h3>
+  <div>
+    <ul>
+      <li>Tap/bump your hands according to the figures
+        <ul>
+          <li>Circle: Closed fists bump the table</li>
+          <li>Vertical line: Open hands with palms facing each other strikes the table.</li>
+          <li>Horizontal line: Flat hands tap the table.</li>
+        </ul>
+      </li>
+      <li>Toggle Color mode for added complexity (say the color name as you go).</li>
     </ul>
 
   </div>
