--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -8,6 +8,7 @@
   <meta name="darkreader-lock" />
 
   <link rel="stylesheet" href="vision.css" />
+  <script src="commonfn.js?v=01"></script>
   <script defer src="settings.js"></script>
 
   <style>
