darkmode fix to prevent FOIT

--- a/blocks.html
+++ b/blocks.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="vision.css" />
   <script src="commonfn.js"></script>
+  <script src="darkmode.js"></script>
   <script defer src="settings.js"></script>
   <script src="customblock.js"></script>
 
