--- a/cpsaccades.html
+++ b/cpsaccades.html
@@ -8,6 +8,7 @@
   <meta name="darkreader-lock">
   <link rel="stylesheet" href="vision.css" />
   <script src="commonfn.js"></script>
+  <script src="darkmode.js"></script>
   <script defer src="settings.js"></script>
   <style>
     #ctrlbar:has([value="redgreen"]:checked)~#main {
