--- a/hartchart.html
+++ b/hartchart.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="vision.css" />
   <link rel="stylesheet" href="metronome.css" />
   <script src="commonfn.js"></script>
-  <script src="settings.js"></script>
+  <script src="darkmode.js"></script>
+  <script defer src="settings.js"></script>
   <script defer src="metronome.js"></script>
   <script src="quotes.js"></script>
   <style>
