--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
   <link rel="stylesheet" href="vision.css?v=01" />
   <script src="commonfn.js?v=01"></script>
-  <script src="settings.js?v=01"></script>
+  <script src="darkmode.js"></script>
+  <script defer src="settings.js?v=01"></script>
 
   <style>
     body {
