--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="vision.css" />
   <script src="commonfn.js?v=01"></script>
+  <script src="darkmode.js"></script>
   <script defer src="settings.js"></script>
 
   <style>
