--- a/lettertracking.html
+++ b/lettertracking.html
@@ -9,7 +9,8 @@
 
   <link rel="stylesheet" href="vision.css" />
   <script src="commonfn.js?v=01"></script>
-  <script src="settings.js"></script>
+  <script src="darkmode.js"></script>
+  <script defer src="settings.js"></script>
 
   <style>
     #output,
