--- a/slaptap.html
+++ b/slaptap.html
@@ -8,7 +8,8 @@
   <meta name="darkreader-lock">
   <link rel="stylesheet" href="vision.css?v=01" />
   <script src="commonfn.js?v=01"></script>
-  <script src="settings.js?v=01"></script>
+  <script src="darkmode.js"></script>
+  <script defer src="settings.js?v=01"></script>
 
   <style>
     [data-theme="light"] {
