--- a/spotmatch.html
+++ b/spotmatch.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="vision.css" />
   <script src="commonfn.js"></script>
   <script src="qrcode.min.js"></script>
+  <script src="darkmode.js"></script>
   <script defer src="settings.js"></script>
 
   <style>
